patch: fix uid and locale encoding